# properties

./: .gitignore  CMakeLists.txt  Makefile  Makefile.example  Makefile.win  README.md  additional.cpp  bad.properties  config.properties  group_properties.cpp  groups.properties  properties.cpp  properties.h  property.cpp  property.h
.github/workflows/: cppbuild.yml
examples/: example01.cpp
nbproject/: Makefile-Debug.mk  Makefile-dynamic-release-x64.mk  Makefile-dynamic-release.mk  Makefile-impl.mk  Makefile-static-release-x64.mk  Makefile-static-release.mk  Makefile-variables.mk  Package-Debug.bash  Package-dynamic-release-x64.bash  Package-dynamic-release.bash  Package-static-release-x64.bash  Package-static-release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
properties/: bad.properties
properties/nbproject/: Makefile-Debug.mk  Makefile-dynamic-release-x64.mk  Makefile-dynamic-release.mk  Package-Debug.bash  Package-dynamic-release-x64.bash  Package-static-release-x64.bash  Package-static-release.bash
tests/: groupstest.cpp  propertiestest.cpp  propertytest.cpp
